--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <ul class="nav-bar-list">
                 <li class="nav-bar-elements"><a class="a-removed-style" href="index.html">Home</a></li>
                 <li class="nav-bar-elements"><a class="a-removed-style" href="deck-pages/page1.html">Deck</a></li>
-                <li class="nav-bar-elements"><a class="a-removed-style">About</a></li>
-                <li class="nav-bar-elements"><a class="a-removed-style">Contact</a></li>
+                <li class="nav-bar-elements"><a class="a-removed-style" href="about.html">About</a></li>
+                <li class="nav-bar-elements"><a class="a-removed-style" href="contacts.html">Contact</a></li>
             </ul>
         </div>
 
@@ -272,6 +272,8 @@
         </details>
     </section>
     
+    
+
     <section class="get-started-container"> <!--How to get started section-->
 
         <h1 class="color-white text-align-center">How to get started</h1>
