--- a/deck-pages/page1.html
+++ b/deck-pages/page1.html
@@ -15,7 +15,46 @@
 </head>
 <body>
 
-    <div id="pagination-wrapper">
+    <div class="pagination">
+   
+        <ul>
+            <li class="pagination-arrow-links">
+                <i class='bx bx-left-arrow-alt btn-arrow'></i>
+            </li>
+            
+                <a href="page1.html">
+                    <li class="pagination-link active-pagination-link">
+                        1
+                    </li>
+                </a>
+            
+                <a href="page2.html">
+                    <li class="pagination-link">
+                        2
+                    </li>
+                </a>
+
+                <a href="page3.html">
+                    <li class="pagination-link">
+                        3
+                    </li>
+                </a>
+
+                <a href="page4.html">
+                    <li class="pagination-link" >
+                        4
+                    </li>
+                </a>
+
+                <a href="page5.html">
+                    <li class="pagination-link">
+                        5
+                    </li>
+                </a>
+            <li class="pagination-arrow-links">
+                <i class='bx bx-right-arrow-alt btn-arrow pagination-arrow-links' ></i>
+            </li>
+        </ul>
 
     </div>
 </body>
