V5(Separated navbar in a separate file, added data-driven approach, generating cards with data, 13 cards in page 1

--- a/deck-pages/page1.html
+++ b/deck-pages/page1.html
@@ -11,9 +11,14 @@
     <!--Import Boxicons-->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!--Javascript-->
-    <script src="/Nature-s-Deck/app.js" defer></script>
+    <script src="../js/app.js" defer type="module"></script>
 </head>
 <body>
+  
+    <div class="card-section">
+        <div class="card-container" data-cards='["Apple","Mango","Potato","Lemon","Coconut","Orange",
+        "Bamboo","Banana","Basil","Turnip","WaterMelon","Pomegranate","Pineapple","Magnolia "]'></div>
+    </div>
 
     <div class="pagination">
    
@@ -57,5 +62,6 @@
         </ul>
 
     </div>
+
 </body>
 </html>
