V6(Dynamic Pagination, Added data for 100+ cards currently, Contact page complete

--- a/about.html
+++ b/about.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <!--CSS-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <!--Favicon-->
     <link rel = "icon" href="images/favicon.jpg">
     <!--Import Boxicons-->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!--Javascript-->
-    <script src="app.js" defer></script>
+    <script src="js/app.js" defer type="module"></script>
 </head>
 <body>
     
@@ -67,7 +67,7 @@
                 Whether in a sprawling garden or a small windowsill pot, 
                 Basil thrives effortlessly, proving that even the smallest plants can have a big impact.
             </p>
-            <img src = "images/BasilPlant.jpg" class="float-right decoration-image">
+            <img src = "images/plantCards/BasilPlant.jpg" class="float-right decoration-image">
         </div>
 
         <div class="float-image-container">
@@ -82,7 +82,7 @@
                  where they were cherished as a symbol of wealth and elegance. Today, 
                  they continue to inspire awe and admiration in gardens, bouquets, and art.
             </p>
-            <img src = "images/TurnipPlant.jpg" class="float-left decoration-image">
+            <img src = "images/plantCards/TurnipPlant.jpg" class="float-left decoration-image">
         </div>
 
     </section>
