--- a/deck-pages/page4.html
+++ b/deck-pages/page4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page-1</title>
+    <title>Page-4</title>
     <!--CSS-->
     <link rel="stylesheet" href="/Nature-s-Deck/styles/style.css">
     <!--Favicon-->
@@ -12,18 +12,16 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!--Javascript-->
     <script src="../js/app.js" defer type="module"></script>
+    
 </head>
 <body>
-  
     <div class="card-section">
-        <div class="card-container" data-cards='["Apple","Mango","Potato","Lemon","Coconut","Orange",
-        "Bamboo","Banana","Basil","Turnip","WaterMelon","Pomegranate","Pineapple","Magnolia","Papaya",
-        "Grapes","Strawberry","Blueberry","Raspberry","Cherry","Plum","Peach","Pear","Kiwi","Avocado",
-        "Tomato","Carrot","Onion","Garlic","Cabbage"]'></div>
-        
+        <div class="card-container" data-cards='[
+    "Rubber Tree", "Tea Plant", "Coffee Plant", "Cocoa Tree", "Vanilla",
+    "Cactus", "Fern", "Barley", "Wheat"
+]'></div>
     </div>
 
-    <div class="pagination" data-current-page="1"></div>
-
+    <div class="pagination" data-current-page="4"></div>
 </body>
 </html>
