Searchbar V1 (Added dynamic Generation and styles for searchbar)

--- a/deck-pages/page1.html
+++ b/deck-pages/page1.html
@@ -6,6 +6,7 @@
     <title>Page-1</title>
     <!--CSS-->
     <link rel="stylesheet" href="/Nature-s-Deck/styles/style.css">
+    <link rel="stylesheet" href="/Nature-s-Deck/styles/searchbar.css">
     <!--Favicon-->
     <link rel = "icon" href="images/favicon.jpg">
     <!--Import Boxicons-->
@@ -14,7 +15,8 @@
     <script src="../js/app.js" defer type="module"></script>
 </head>
 <body>
-  
+    <div class="searchbar-container"></div>
+    
     <div class="card-section">
         <div class="card-container" data-cards='["Apple","Mango","Potato","Lemon","Coconut","Orange",
         "Bamboo","Banana","Basil","Turnip","WaterMelon","Pomegranate","Pineapple","Magnolia","Papaya",
