--- a/deck-pages/page3.html
+++ b/deck-pages/page3.html
@@ -6,6 +6,7 @@
     <title>Page-3</title>
     <!--CSS-->
     <link rel="stylesheet" href="/Nature-s-Deck/styles/style.css">
+    <link rel="stylesheet" href="/Nature-s-Deck/styles/searchbar.css">
     <!--Favicon-->
     <link rel = "icon" href="images/favicon.jpg">
     <!--Import Boxicons-->
@@ -14,6 +15,7 @@
     <script src="../js/app.js" defer type="module"></script>
 </head>
 <body>
+    <div class="searchbar-container"></div>
     
     <div class="card-section">
         <div class="card-container" data-cards='[
