--- a/deck-pages/page4.html
+++ b/deck-pages/page4.html
@@ -6,6 +6,7 @@
     <title>Page-4</title>
     <!--CSS-->
     <link rel="stylesheet" href="/Nature-s-Deck/styles/style.css">
+    <link rel="stylesheet" href="/Nature-s-Deck/styles/searchbar.css">
     <!--Favicon-->
     <link rel = "icon" href="images/favicon.jpg">
     <!--Import Boxicons-->
@@ -15,6 +16,8 @@
     
 </head>
 <body>
+    <div class="searchbar-container"></div>
+    
     <div class="card-section">
         <div class="card-container" data-cards='[
     "Rubber Tree", "Tea Plant", "Coffee Plant", "Cocoa Tree", "Vanilla",
